--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -8,6 +8,6 @@ $fa-font-path: '../webfonts';
 
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
-body{
+*{
     font-family: 'Kumbh Sans', sans-serif;
 }
